--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /project/target/
 /project/project/target/
 /src/main/resources/stackoverflow/stackoverflow.csv
+/src/test/resources/stackoverflow/stackoverflow.csv
